# portnoy

./: README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: article.py  article_option.py
backend/app/models/: __init__.py  article.py
backend/app/schemas/: article.py  article_option.py
backend/app/types/: article.py
frontend/: .eslintrc.yml  .gitignore  Procfile  README.md  host-via-express.mjs  index.css  index.html  jest.config.json  package.json  tsconfig-test.json  tsconfig.json  webpack.config.js
frontend/src/: application.ts  index.tsx
frontend/src/components/: questionnaire.scss  questionnaire.scss.d.ts  questionnaire.tsx
frontend/src/components/questionnaire-steps/: color.tsx  piece.tsx  sex.tsx  size.tsx
frontend/src/services/: questionnaire.ts
