[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Alexander Dmitriev <alexander.dmitriev2580@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.6"
fastapi = "^0.68.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.dev-dependencies]
black = "^21.7b0"
flake8 = "^3.9.2"
mypy = "^0.910"
isort = "^5.9.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
